--- a/calc-app/src/app/calculator/calc-task/calc-task.component.html
+++ b/calc-app/src/app/calculator/calc-task/calc-task.component.html
@@ -17,6 +17,7 @@
       </mat-label>
       <input
         matInput
+        type="number"
         autocomplete="off"
         class="formControl"
         formControlName="result"
