--- a/calc-app/src/app/app.component.html
+++ b/calc-app/src/app/app.component.html
@@ -1,3 +1,6 @@
 <h1>{{ title }}</h1>
 <app-calc-config></app-calc-config>
-<app-calc-task></app-calc-task>
+<app-calc-task
+  [calcTask]="calcTask"
+  (generate)="generateTask()"
+></app-calc-task>
