--- a/calc-app/src/app/app.component.html
+++ b/calc-app/src/app/app.component.html
@@ -1,6 +1,10 @@
 <h1>{{ title }}</h1>
-<app-calc-config [additionConfig]="additionConfig"></app-calc-config>
+<app-calc-config
+  [additionConfig]="configs[0]"
+  (selectionChange)="updateSelection($event)"
+></app-calc-config>
 <app-calc-task
+  *ngIf="selectedOperations.length > 0"
   [calcTask]="calcTask"
   (generate)="generateTask()"
 ></app-calc-task>
