--- a/calc-app/src/app/calculator/calc-config/calc-config.component.html
+++ b/calc-app/src/app/calculator/calc-config/calc-config.component.html
@@ -1,14 +1,25 @@
-<form [formGroup]="formGroup">
-  <ng5-slider
-    [(value)]="additionConfig.rangeFirst[0]"
-    [(highValue)]="additionConfig.rangeFirst[1]"
-    [options]="options"
-  >
-  </ng5-slider>
-  <ng5-slider
-    [(value)]="additionConfig.rangeSecond[0]"
-    [(highValue)]="additionConfig.rangeSecond[1]"
-    [options]="options"
-  >
-  </ng5-slider>
+<form>
+  <section>
+    <mat-checkbox
+      name="+"
+      [(ngModel)]="additionConfig.active"
+      (change)="onChange($event)"
+    >
+      Addition
+    </mat-checkbox>
+    <div *ngIf="additionConfig.active">
+      <ng5-slider
+        [(value)]="additionConfig.rangeFirst[0]"
+        [(highValue)]="additionConfig.rangeFirst[1]"
+        [options]="options"
+      >
+      </ng5-slider>
+      <ng5-slider
+        [(value)]="additionConfig.rangeSecond[0]"
+        [(highValue)]="additionConfig.rangeSecond[1]"
+        [options]="options"
+      >
+      </ng5-slider>
+    </div>
+  </section>
 </form>
