--- a/calc-app/src/app/app.component.html
+++ b/calc-app/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>{{ title }}</h1>
 <app-calc-config
   [additionConfig]="configs[0]"
+  [subtractionConfig]="configs[1]"
   (selectionChange)="updateSelection($event)"
 ></app-calc-config>
 <app-calc-task
