--- a/calc-app/src/app/calculator/calc-config/calc-config.component.scss
+++ b/calc-app/src/app/calculator/calc-config/calc-config.component.scss
@@ -1,3 +1,39 @@
-form {
-  width: 300px;
+::ng-deep {
+  form {
+    width: 300px;
+    padding: 20px;
+
+    > section {
+      padding-top: 10px;
+      padding-bottom: 20px;
+    }
+  }
+
+  .operator-config {
+    .ng5-slider {
+      .ng5-slider-selection {
+        background-color: #ff4081;
+      }
+
+      .ng5-slider-pointer {
+        background-color: #3f51b5;
+        width: 20px;
+        height: 20px;
+        top: -10px;
+
+        &:after {
+          width: 5px;
+          height: 5px;
+          top: 5px;
+          left: 5px;
+        }
+
+        &.ng5-slider-active {
+          &:after {
+            background-color: #ff4081;
+          }
+        }
+      }
+    }
+  }
 }
