--- a/calc-app/src/app/calculator/calc-task/calc-task.component.scss
+++ b/calc-app/src/app/calculator/calc-task/calc-task.component.scss
@@ -1,8 +1,16 @@
 form {
   display: flex;
   flex-direction: column;
+  margin-top: 40px;
+
+  > div {
+    > mat-form-field {
+      width: 100%;
+    }
+  }
 }
 
 button {
   margin-top: 10px;
+  margin-bottom: 50px;
 }
