--- a/calc-app/src/styles.scss
+++ b/calc-app/src/styles.scss
@@ -6,14 +6,11 @@ body {
 }
 
 body {
-  margin: 10px;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  margin: 0;
 }
 
 app-root {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin-top: 20px;
 }
 
