--- a/calc-app/src/app/calculator/calc-task/calc-task.component.html
+++ b/calc-app/src/app/calculator/calc-task/calc-task.component.html
@@ -29,5 +29,10 @@
       </mat-error>
     </mat-form-field>
   </div>
-  <button mat-raised-button color="primary">Abschicken</button>
+  <div class="button-container">
+    <button mat-raised-button color="primary">Abschicken</button>
+    <button mat-raised-button type="button" (click)="onClickNew()">
+      Neue Aufgabe
+    </button>
+  </div>
 </form>
